[package]
name = "yar"
version = "0.1.0"
description = "An incremental static site generator written in Rust"
readme = "README.md"
authors = ["Rayyan Cyclegar"]
edition.workspace = true

[dependencies]
color-eyre.workspace = true

clap = { version = "4.5.38", features = ["derive"] }

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
color-eyre = "0.6"

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
must_use_candidate = "allow"
missing-const-for-fn = "allow"

[lints]
workspace = true
