[package]
name = "yar"
version = "0.1.0"
description = "An incremental static site generator written in Rust"
readme = "README.md"
authors = ["Rayyan Cyclegar"]
license = "MIT"
repository = "https://github.com/AbooMinister25/yar"
edition.workspace = true

[dependencies]
color-eyre.workspace = true

site = { path = "crates/site", version = "0.1.0" }

clap = { version = "4.5.38", features = ["derive"] }
tempfile = "3.20.0"
figment = { version = "0.10.19", features = ["toml"] }

[dev-dependencies]
insta.workspace = true

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
color-eyre = "0.6"
insta = { version = "1.43.1", features = ["yaml", "redactions"] }

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[lints]
workspace = true

[profile.dev.package]
insta.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
