[package]
name = "yar"
version = "0.7.0"
description = "An incremental static site generator written in Rust"
readme = "README.md"
authors = ["Rayyan Cyclegar"]
license = "MIT"
repository = "https://github.com/AbooMinister25/yar"
edition.workspace = true

[dependencies]
color-eyre.workspace = true

yar_site = { path = "crates/site", version = "0.3.0" }

clap = { version = "4.5.38", features = ["derive"] }
tempfile = "3.20.0"
figment = { version = "0.10.19", features = ["toml"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-livereload = "0.9.6"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[dev-dependencies]
insta.workspace = true

[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
color-eyre = "0.6"
insta = { version = "1.43.1", features = ["yaml", "redactions"] }

[workspace.package]
edition = "2024"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"

[lints]
workspace = true

[profile.dev.package]
insta.opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[profile.dev]
split-debuginfo = "unpacked"

