[package]
name = "yar_markdown"
version = "0.8.0"
license = "MIT"
description = "Markdown handling for yar."
edition.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
color-eyre.workspace = true
minijinja = "2.11.0"
nom = "7.1.3"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
serde = { version = "1.0.219", features = ["derive"] }
smol_str = { version = "0.3.2", features = ["serde"] }
toml = "0.8.22"
arborium = { version = "2", features = ["all-languages"] }
arborium-theme = { version = "2.16.0", features = ["toml"] }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }

[lints]
workspace = true
