[package]
name = "site"
edition.workspace = true

[dependencies]
color-eyre.workspace = true

markdown = { path = "../markdown" }

ignore = "0.4.23"
petgraph = "0.8.1"
rusqlite = { version = "0.35.0", features = ["bundled", "chrono", "array"] }
seahash = "4.1.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0"
askama = "0.14.0"
chrono = { version = "0.4.41" }
minijinja = { version = "2.10.2", features = ["loader"] }
grass = "0.13.4"
minijinja-contrib = { version = "2.11.0", features = ["datetime"] }
url = { version = "2.5.4", features = ["serde"] }
minify-html = "0.16.4"


[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }

[lints]
workspace = true
