[package]
name = "yar_site"
version = "0.2.0"
license = "MIT"
description = "Library for creating and working with static sites for yar."
edition.workspace = true

[dependencies]
color-eyre.workspace = true

yar_markdown = { path = "../markdown", version = "0.2.0"}

ignore = "0.4.23"
rusqlite = { version = "0.35.0", features = ["bundled", "chrono", "array"] }
seahash = "4.1.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4.41" }
minijinja = { version = "2.10.2", features = ["loader", "loop_controls"] }
grass = "0.13.4"
minijinja-contrib = { version = "2.11.0", features = ["datetime"] }
url = { version = "2.5.4", features = ["serde"] }
minify-html = "0.16.4"
smol_str = { version = "0.3.2", features = ["serde"] }
rayon = "1.10.0"
crossbeam = "0.8.4"
toml = "0.9.2"
mlua = { version = "0.11.1", features = ["luau-jit"] }


[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }

[lints]
workspace = true
